--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
   <section id="footer">
     <div class="footer container">
       <div class="brand"><h1><span>C</span>handan <span>R</span>athod</h1></div>
-      <h2>Your Complete Web Solution</h2>
+      
       <div class="social-icon">
         <div class="social-item">
           <a href="https://www.facebook.com/chandan.rathod.7315"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png"/></a>
@@ -211,7 +211,7 @@
           <a href="https://github.com/chandanrathod04"><img src="https://img.icons8.com/bubbles/100/000000/github.png"/></a>
         </div>
       </div>
-      <p>Copyright © 2020 chandan. All rights reserved</p>
+      <p> easecode™ 2020 chandan. All rights reserved</p>
     </div>
   </section>
   <!-- End Footer -->
