--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <h2>Front End Developer</h2>
         <p>DSesign, develop games ,web applications ,web pages ,etc. for os. <i>The main duties and responsibilities of mine include directing and
           participating in programming activities, monitoring, and evaluating system performance, and designing and implementing new programs and features.</i></p>
-        <a href="#" class="cta">Download Resume</a>
+        <a href="Chandan Rathod.pdf" class="cta">Download Resume</a>
       </div>
     </div>
   </section>
